hack/faros.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faros
  labels:
    app: faros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faros
  template:
    metadata:
      labels:
        app: faros
    spec:
      serviceAccountName: faros
      containers:
        - image: faros:latest
          imagePullPolicy: Never
          name: faros
          ports:
          - name: http
            containerPort: 80
            hostPort: 80
