hack/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: faros
spec:
  controllerName: "github.com/bjorngylling/faros"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  gatewayClassName: "faros"
  listeners:
  - protocol: HTTP
    port: 80
    name: public-gw
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-1
spec:
  parentRefs:
  - name: public
  hostnames:
  - "bjorns-macbook-pro.local"
  rules:
  - matches:
    - path:
        type: "Exact"
        value: "/demo"
    backendRefs:
    - name: service-1
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-2
spec:
  parentRefs:
  - name: public
  hostnames:
  - "bjorns-macbook-pro.local"
  rules:
  - matches:
    - path:
        value: "/sample"
    backendRefs:
    - name: service-2
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
spec:
  parentRefs:
  - name: public
  hostnames:
  - "localhost"
  rules:
    - matches:
      - path:
          value: "/"
          type: "Exact"
      backendRefs:
      - name: service-1
        port: 80
      - name: service-2
        port: 80
